# alptools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/atools/: __init__.py
src/atools/base_tools/: __init__.py  __logger.py
src/atools/base_tools/file/: copy_file.py  delete_file.py  move_file.py  read_file.py  write_file.py
src/atools/base_tools/object/: append_unique.py  object_get.py  object_set.py  object_split.py
src/atools/base_tools/path/: check_dir.py  path_join.py
src/atools/base_tools/string/: connect_str.py  is_number.py  str_add_num.py
src/atools/io_tools/: __init__.py  clear_empty_dir.py  get_file_hash.py  xor_file.py
src/atools/io_tools/reader/: __debug_detector.py  io_reader.py  memory_view_reader.py  mmap_reader.py
src/atools/io_tools/writer/: io_writer.py
src/atools/logger/: __init__.py  logger_normal.py  logger_style.py
src/atools/misc_tools/: ayaml.py  setup_module_path.py  time_tick.py
src/atools/object_tools/: __init__.py  dict_diff.py  json_dump.py  object_filter.py  object_type.py
src/atools/object_tools/classes/: class_dict.py  json_dict.py
