[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alptools"
dynamic = ["version"]
description = 'simple tools for alpha projects'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "AhAlpha" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
full = ["PyYAML>=6"]

[tool.hatch.version]
path = "src/atools/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/atools"]
